--- a/MuZest/Modules/Profile/Profile.storyboard
+++ b/MuZest/Modules/Profile/Profile.storyboard
@@ -23,31 +23,31 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HB2-r2-Wcq" customClass="Pr">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yo0-mK-AnH">
-                                                <rect key="frame" x="165" y="200" width="45" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yo0-mK-AnH">
+                                                <rect key="frame" x="187.5" y="200" width="0.0" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="about" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbK-Lu-pIH">
-                                                <rect key="frame" x="16" y="262" width="343" height="21"/>
+                                            <label opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbK-Lu-pIH">
+                                                <rect key="frame" x="16" y="220" width="343" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="followers: 10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gR-4N-Bep">
-                                                <rect key="frame" x="16" y="324" width="96" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="followers: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gR-4N-Bep">
+                                                <rect key="frame" x="16" y="240" width="88" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="following: 5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMo-9d-4l3">
-                                                <rect key="frame" x="16" y="293" width="88" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMo-9d-4l3">
+                                                <rect key="frame" x="16" y="230" width="0.0" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oVm-hH-4Yg">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="oVm-hH-4Yg">
                                                 <rect key="frame" x="97.5" y="10" width="180" height="180"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="180" id="FpC-Kq-sHU"/>
@@ -55,13 +55,13 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="posts: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gc-5K-mhu">
-                                                <rect key="frame" x="16" y="355" width="62" height="21"/>
+                                                <rect key="frame" x="16" y="271" width="62" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="realName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cz2-xl-FKs">
-                                                <rect key="frame" x="151" y="231" width="73" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cz2-xl-FKs">
+                                                <rect key="frame" x="187.5" y="210" width="0.0" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -108,7 +108,7 @@
                         <viewLayoutGuide key="safeArea" id="PkQ-zg-Ljh"/>
                     </view>
                     <navigationItem key="navigationItem" id="MHQ-pv-Ynr" userLabel="Nickname">
-                        <barButtonItem key="leftBarButtonItem" title="Logout" id="OpO-5j-wbL">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" springLoaded="YES" id="OpO-5j-wbL">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="logout:" destination="PME-L5-NEi" id="h6F-ri-l3M"/>
@@ -119,6 +119,9 @@
                                 <rect key="frame" x="280" y="9.5" width="79" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="icon-settings-filled"/>
+                                <connections>
+                                    <action selector="settingsButtonClicked:" destination="PME-L5-NEi" eventType="touchUpInside" id="AZZ-mi-Aee"/>
+                                </connections>
                             </button>
                             <connections>
                                 <action selector="settingsButtonClicked:" destination="PME-L5-NEi" id="v90-ZC-2eW"/>
@@ -132,6 +135,7 @@
                         <outlet property="followingLabel" destination="wMo-9d-4l3" id="gz8-hj-Cr2"/>
                         <outlet property="nameLabel" destination="Yo0-mK-AnH" id="H68-jo-eNy"/>
                         <outlet property="postsLabel" destination="1gc-5K-mhu" id="Thh-ox-hCN"/>
+                        <outlet property="profileImage" destination="oVm-hH-4Yg" id="SdA-mD-up3"/>
                         <outlet property="realNameLabel" destination="cz2-xl-FKs" id="h7S-2e-a2s"/>
                         <outlet property="realScrollView" destination="Gyx-Sx-dH3" id="thT-Q6-RgR"/>
                         <outlet property="scrollView" destination="HB2-r2-Wcq" id="Toz-N8-LgQ"/>
@@ -144,20 +148,60 @@
         <!--Settings View-->
         <scene sceneID="9iv-Me-ud3">
             <objects>
-                <viewController storyboardIdentifier="SettingsView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pZT-gK-HJC" customClass="SettingsView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingsView" id="pZT-gK-HJC" customClass="SettingsView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XgO-Sd-iaD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fEy-oe-Rgp">
-                                <rect key="frame" x="16" y="63" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rx7-Um-WfG">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U5t-T3-fQp">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qfp-A2-2pJ">
+                                                <rect key="frame" x="97.5" y="50" width="180" height="180"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="180" id="KvW-fX-O5M"/>
+                                                    <constraint firstAttribute="height" constant="180" id="awL-Qg-s4V"/>
+                                                </constraints>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SaF-Zj-vJj">
+                                                <rect key="frame" x="139" y="257" width="97" height="30"/>
+                                                <state key="normal" title="Change photo"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="qfp-A2-2pJ" firstAttribute="centerX" secondItem="U5t-T3-fQp" secondAttribute="centerX" id="3SQ-43-xuK"/>
+                                            <constraint firstItem="SaF-Zj-vJj" firstAttribute="centerX" secondItem="qfp-A2-2pJ" secondAttribute="centerX" id="MVQ-5j-N3Z"/>
+                                            <constraint firstItem="qfp-A2-2pJ" firstAttribute="top" secondItem="U5t-T3-fQp" secondAttribute="top" constant="50" id="YO8-EI-dLF"/>
+                                            <constraint firstItem="SaF-Zj-vJj" firstAttribute="top" secondItem="qfp-A2-2pJ" secondAttribute="bottom" constant="27" id="eFI-6h-Iyj"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="U5t-T3-fQp" firstAttribute="height" secondItem="rx7-Um-WfG" secondAttribute="height" id="EDO-Er-BVX"/>
+                                    <constraint firstItem="U5t-T3-fQp" firstAttribute="leading" secondItem="rx7-Um-WfG" secondAttribute="leading" id="P84-nb-Gj2"/>
+                                    <constraint firstItem="U5t-T3-fQp" firstAttribute="top" secondItem="rx7-Um-WfG" secondAttribute="top" id="QeG-fZ-gWA"/>
+                                    <constraint firstAttribute="bottom" secondItem="U5t-T3-fQp" secondAttribute="bottom" id="WCN-75-WbX"/>
+                                    <constraint firstAttribute="trailing" secondItem="U5t-T3-fQp" secondAttribute="trailing" id="Zks-ya-qPN"/>
+                                    <constraint firstItem="U5t-T3-fQp" firstAttribute="width" secondItem="rx7-Um-WfG" secondAttribute="width" id="rXC-xI-P9Y"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rx7-Um-WfG" firstAttribute="leading" secondItem="ugO-T8-a4w" secondAttribute="leading" id="ApU-Z2-BMb"/>
+                            <constraint firstItem="rx7-Um-WfG" firstAttribute="top" secondItem="ugO-T8-a4w" secondAttribute="top" id="BD8-80-SM6"/>
+                            <constraint firstItem="ugO-T8-a4w" firstAttribute="trailing" secondItem="rx7-Um-WfG" secondAttribute="trailing" id="Tk3-K0-JYb"/>
+                            <constraint firstItem="ugO-T8-a4w" firstAttribute="bottom" secondItem="rx7-Um-WfG" secondAttribute="bottom" id="dTa-qN-ql8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ugO-T8-a4w"/>
                     </view>
+                    <connections>
+                        <outlet property="profileImageLabel" destination="qfp-A2-2pJ" id="a4J-KY-OzI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tbf-1T-6py" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -186,6 +230,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1" width="940" height="788"/>
         <image name="icon-settings-filled" width="25" height="25"/>
         <image name="user_male" width="30" height="30"/>
     </resources>
