--- a/MuZest/Modules/Profile/Profile.storyboard
+++ b/MuZest/Modules/Profile/Profile.storyboard
@@ -139,6 +139,7 @@
                         <outlet property="realNameLabel" destination="cz2-xl-FKs" id="h7S-2e-a2s"/>
                         <outlet property="realScrollView" destination="Gyx-Sx-dH3" id="thT-Q6-RgR"/>
                         <outlet property="scrollView" destination="HB2-r2-Wcq" id="Toz-N8-LgQ"/>
+                        <segue destination="pZT-gK-HJC" kind="show" identifier="toSettings" id="XRz-YN-TC0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kbu-S6-hvN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -154,10 +155,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rx7-Um-WfG">
-                                <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="411"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U5t-T3-fQp">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="411"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qfp-A2-2pJ">
                                                 <rect key="frame" x="70" y="10" width="180" height="180"/>
@@ -166,38 +167,26 @@
                                                     <constraint firstAttribute="height" constant="180" id="awL-Qg-s4V"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4t-Pf-83g">
-                                                <rect key="frame" x="20" y="215" width="88" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAA-7V-xlR">
-                                                <rect key="frame" x="20" y="261" width="87" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Real Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4t-Pf-83g">
+                                                <rect key="frame" x="20" y="215" width="87" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YLb-0k-kbj">
-                                                <rect key="frame" x="118" y="210.5" width="186" height="30"/>
-                                                <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GbU-Re-zs0">
-                                                <rect key="frame" x="117" y="256.5" width="187" height="30"/>
+                                                <rect key="frame" x="117" y="210.5" width="187" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQU-rM-y8e">
-                                                <rect key="frame" x="20" y="307" width="51" height="21"/>
+                                                <rect key="frame" x="20" y="256" width="51" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vNo-Bh-n4B">
-                                                <rect key="frame" x="267" y="444" width="37" height="30"/>
+                                                <rect key="frame" x="267" y="351" width="37" height="30"/>
                                                 <state key="normal" title="Done">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
@@ -206,7 +195,7 @@
                                                 </connections>
                                             </button>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uW8-5S-5we">
-                                                <rect key="frame" x="81" y="301.5" width="223" height="90"/>
+                                                <rect key="frame" x="81" y="260.5" width="223" height="90"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="90" id="SfC-qP-Fs9"/>
                                                 </constraints>
@@ -216,23 +205,18 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="uW8-5S-5we" firstAttribute="top" secondItem="YLb-0k-kbj" secondAttribute="bottom" constant="20" id="2IJ-cS-SwI"/>
                                             <constraint firstItem="qfp-A2-2pJ" firstAttribute="centerX" secondItem="U5t-T3-fQp" secondAttribute="centerX" id="3SQ-43-xuK"/>
-                                            <constraint firstItem="sAA-7V-xlR" firstAttribute="leading" secondItem="B4t-Pf-83g" secondAttribute="leading" id="8b2-hX-kVS"/>
                                             <constraint firstItem="B4t-Pf-83g" firstAttribute="top" secondItem="qfp-A2-2pJ" secondAttribute="bottom" constant="25" id="AZs-No-b2v"/>
                                             <constraint firstItem="YLb-0k-kbj" firstAttribute="leading" secondItem="B4t-Pf-83g" secondAttribute="trailing" constant="10" id="D8b-LC-q5C"/>
                                             <constraint firstItem="B4t-Pf-83g" firstAttribute="leading" secondItem="U5t-T3-fQp" secondAttribute="leading" constant="20" id="FEe-D6-jlA"/>
                                             <constraint firstAttribute="trailing" secondItem="YLb-0k-kbj" secondAttribute="trailing" constant="16" id="IMt-sM-W02"/>
-                                            <constraint firstItem="GbU-Re-zs0" firstAttribute="centerY" secondItem="sAA-7V-xlR" secondAttribute="centerY" id="Mvm-qJ-dbj"/>
-                                            <constraint firstItem="uW8-5S-5we" firstAttribute="top" secondItem="GbU-Re-zs0" secondAttribute="bottom" constant="15" id="Ny6-L4-VH4"/>
-                                            <constraint firstItem="GbU-Re-zs0" firstAttribute="leading" secondItem="sAA-7V-xlR" secondAttribute="trailing" constant="10" id="PjF-qt-QKM"/>
-                                            <constraint firstItem="sAA-7V-xlR" firstAttribute="top" secondItem="B4t-Pf-83g" secondAttribute="bottom" constant="25" id="VTY-LP-VQd"/>
                                             <constraint firstItem="qfp-A2-2pJ" firstAttribute="top" secondItem="U5t-T3-fQp" secondAttribute="top" constant="10" id="YO8-EI-dLF"/>
-                                            <constraint firstItem="RQU-rM-y8e" firstAttribute="leading" secondItem="sAA-7V-xlR" secondAttribute="leading" id="cLC-Sq-RkV"/>
                                             <constraint firstAttribute="trailing" secondItem="vNo-Bh-n4B" secondAttribute="trailing" constant="16" id="dc9-Hr-fv0"/>
-                                            <constraint firstAttribute="trailing" secondItem="GbU-Re-zs0" secondAttribute="trailing" constant="16" id="ekg-zv-2mS"/>
                                             <constraint firstItem="uW8-5S-5we" firstAttribute="leading" secondItem="RQU-rM-y8e" secondAttribute="trailing" constant="10" id="gwE-hd-QDE"/>
                                             <constraint firstAttribute="trailing" secondItem="uW8-5S-5we" secondAttribute="trailing" constant="16" id="iiN-wA-xkq"/>
-                                            <constraint firstItem="RQU-rM-y8e" firstAttribute="top" secondItem="sAA-7V-xlR" secondAttribute="bottom" constant="25" id="tv9-8O-qPf"/>
+                                            <constraint firstItem="RQU-rM-y8e" firstAttribute="leading" secondItem="B4t-Pf-83g" secondAttribute="leading" id="qaP-0G-gQP"/>
+                                            <constraint firstItem="RQU-rM-y8e" firstAttribute="top" secondItem="B4t-Pf-83g" secondAttribute="bottom" constant="20" id="qvr-Yx-OKc"/>
                                             <constraint firstItem="YLb-0k-kbj" firstAttribute="centerY" secondItem="B4t-Pf-83g" secondAttribute="centerY" id="uH4-jc-id9"/>
                                         </constraints>
                                     </view>
@@ -261,14 +245,13 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="aboutTextField" destination="uW8-5S-5we" id="6LK-3z-VyC"/>
-                        <outlet property="firstNameTextLabel" destination="YLb-0k-kbj" id="LGb-Tp-pfF"/>
-                        <outlet property="lastNameTextLabel" destination="GbU-Re-zs0" id="fp9-5q-Znl"/>
                         <outlet property="profileImageLabel" destination="qfp-A2-2pJ" id="a4J-KY-OzI"/>
+                        <outlet property="realNameTextField" destination="YLb-0k-kbj" id="jkK-00-ErJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tbf-1T-6py" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4085.5999999999999" y="453.82308845577217"/>
+            <point key="canvasLocation" x="4238" y="453"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Gcf-VT-AfI">
